# Perceptron

./: .gitignore  CMakeLists.txt  Perceptron  README.md  main.cpp
include/Data/: Input.hpp  iris_data.hpp  iris_dataset.hpp
include/NeuralNetwork/: Layer.hpp  NeuralNetwork.hpp  Neuron.hpp
include/Utils/: Stopwatch.hpp  Utils.hpp
includes/: Layer.hpp  Matrix.hpp  Neuron.hpp  Perceptron.h  Perceptron.hpp  Utils.h  Utils.hpp
src/: Layer.cpp  Matrix.cpp  Neuron.cpp  Perceptron.cpp  Utils.cpp
src/Data/: iris_dataset.cpp
src/NeuralNetwork/: Layer.cpp  NeuralNetwork.cpp  Neuron.cpp
src/Utils/: Stopwatch.cpp  Utils.cpp
v1/: CMakeLists.txt  Perceptron  README.md  main.cpp
v1/src/: Matrix.cpp  Neuron.cpp  Perceptron.cpp  Utils.cpp
v2/: CMakeLists.txt
